RegularVoxelGrid class to ease modification and getting points, size of file, write points to txt that are used in octomap. Demo adding out of bounds point in regular voxel grid leading to error and proper handling in octomap

--- a/Octomap_brainspark.ipynb
+++ b/Octomap_brainspark.ipynb
@@ -2,127 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
    "id": "5f5abb8a-d65e-4de3-a41b-0e2afc1ed7c9",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-09T21:01:21.563212Z",
+     "start_time": "2024-06-09T21:01:20.354114Z"
+    }
+   },
    "source": [
     "import numpy as np\n",
     "import open3d as o3d\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "96c3f980-2dc9-4261-bfab-185fb8cf25ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resolution = 0.25  # 25cm\n",
-    "max_length = 20\n",
-    "grid_size = [int(max_length / resolution)] * 3\n",
-    "regular_voxel_grid = np.zeros(grid_size)\n",
-    "total_voxels = int(np.prod(grid_size))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "5b4da8a2-92a5-462e-87b4-dce549ee1748",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "512000"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+    "import os\n",
+    "from scripts.regular_voxel_grid import RegularVoxelGrid, visualize_voxel_grid"
    ],
-   "source": [
-    "total_voxels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "773d8e48-78b9-4f3c-8451-1fa2f1d632f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "occuppied_voxels_count = int(total_voxels * 0.05)\n",
-    "occuppied_indices = np.random.choice(total_voxels, occuppied_voxels_count, replace=False)\n",
-    "occuppied_voxels = np.unravel_index(occuppied_indices, grid_size)\n",
-    "regular_voxel_grid[occuppied_voxels] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "0dd38c2a-3ab5-42af-ba0b-099b49caab64",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PointCloud with 25600 points."
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pointcloud = np.column_stack(occuppied_voxels)\n",
-    "pcd = o3d.geometry.PointCloud()\n",
-    "pcd.points = o3d.utility.Vector3dVector(pointcloud)\n",
-    "pcd.paint_uniform_color([0, 1, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "5a227bd9-a1e8-48b3-ac20-3d9d9bdb462a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "o3d.visualization.draw_geometries([pcd])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "51162010-bb99-4e1a-9d89-aa9095aa5d43",
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "regular voxel grid map size: 0.6593780517578125 MB\n"
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
      ]
     }
    ],
-   "source": [
-    "o3d.io.write_point_cloud(\"voxel_grid.ply\", pcd)\n",
-    "print(f\"regular voxel grid map size: {os.path.getsize('voxel_grid.ply') / (1024 * 1024)} MB\")"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "f15b64d1-2b70-4939-8261-a516253a7d88",
-   "metadata": {},
+   "id": "96c3f980-2dc9-4261-bfab-185fb8cf25ff",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-09T21:01:21.566535Z",
+     "start_time": "2024-06-09T21:01:21.564084Z"
+    }
+   },
+   "source": "voxel_grid = RegularVoxelGrid(resolution=0.25, max_coord=10, min_coord=-10)",
    "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "id": "5b4da8a2-92a5-462e-87b4-dce549ee1748",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-09T21:01:23.738516Z",
+     "start_time": "2024-06-09T21:01:21.567272Z"
+    }
+   },
    "source": [
-    "point_cloud_file = \"point_cloud.txt\"\n",
-    "np.savetxt(point_cloud_file, pointcloud, fmt='%f %f %f')\n"
-   ]
+    "voxel_grid.create_regular_voxel_map()\n",
+    "voxel_grid.add_point_to_voxel_grid(np.array([5, 2, 0]))\n",
+    "visualize_voxel_grid(voxel_grid.get_voxel_grid_points())"
+   ],
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "id": "773d8e48-78b9-4f3c-8451-1fa2f1d632f4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-09T21:01:23.745108Z",
+     "start_time": "2024-06-09T21:01:23.741904Z"
+    }
+   },
+   "source": "# voxel_grid.add_point_to_voxel_grid(np.array([22, 2, 0]))",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "id": "51162010-bb99-4e1a-9d89-aa9095aa5d43",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-09T21:01:23.785705Z",
+     "start_time": "2024-06-09T21:01:23.746507Z"
+    }
+   },
+   "source": [
+    "voxel_grid.save_voxel_grid_ply()\n",
+    "voxel_grid.get_saved_voxel_map_disk_size()"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0029869079589844"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "id": "f15b64d1-2b70-4939-8261-a516253a7d88",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-09T21:01:23.838702Z",
+     "start_time": "2024-06-09T21:01:23.786408Z"
+    }
+   },
+   "source": "voxel_grid.write_voxel_grid_points_to_txt()\n",
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -134,20 +121,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
    "id": "9a6853c1-6714-4567-91c0-f2aa51736d72",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-06-09T21:01:36.686222Z",
+     "start_time": "2024-06-09T21:01:23.839556Z"
+    }
    },
-   "outputs": [],
    "source": [
     "# Create an Open3D Octree\n",
     "octree = o3d.geometry.Octree(max_depth=8)  # The tree is stopped when the depth level reaches 8\n",
-    "octree.convert_from_point_cloud(pcd, size_expand=0.25)\n",
+    "pcd = o3d.geometry.PointCloud()\n",
+    "pcd.points = o3d.utility.Vector3dVector(voxel_grid.get_voxel_grid_points())\n",
+    "octree.convert_from_point_cloud(pcd, size_expand=0.02)\n",
     "\n",
     "# Visualize the Octree\n",
-    "o3d.visualization.draw_geometries([octree])\n"
-   ]
+    "o3d.visualization.draw_geometries([octree])"
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -158,22 +151,179 @@
    ]
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-09T21:10:02.302530Z",
+     "start_time": "2024-06-09T21:09:59.841677Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "7dad4e53-4c62-4f64-9026-ffc8448c8438",
-   "metadata": {},
+   "source": [
+    "!cp simple_example.cpp OCTOMAP/octomap/src\n",
+    "if not os.path.exists('OCTOMAP/build'):\n",
+    "    os.makedirs('OCTOMAP/build', exist_ok=True)\n",
+    "!cd OCTOMAP/build && cmake .. && make\n",
+    "!./OCTOMAP/bin/simple_example  # will create the octomap corresponding to above voxel grid points and save it to a binary file"
+   ],
+   "id": "bd740c32c1634936",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "octomap size: 0.15573501586914062 MB\n"
+      "/home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap\r\n",
+      "\u001B[0mCMake Deprecation Warning at CMakeLists.txt:1 (CMAKE_MINIMUM_REQUIRED):\r\n",
+      "  Compatibility with CMake < 3.5 will be removed from a future version of\r\n",
+      "  CMake.\r\n",
+      "\r\n",
+      "  Update the VERSION argument <min> value or use a ...<max> suffix to tell\r\n",
+      "  CMake that the project does not need compatibility with older versions.\r\n",
+      "\r\n",
+      "\u001B[0m\r\n",
+      "-- \r\n",
+      "\r\n",
+      "-- octomap building as Release\r\n",
+      "-- Could NOT find Doxygen (missing: DOXYGEN_EXECUTABLE) \r\n",
+      "-- \r\n",
+      "\r\n",
+      "-- Compile octomap using: make\r\n",
+      "-- Install octomap using: make install\r\n",
+      "--     (be sure to set the correct CMAKE_INSTALL_PREFIX before)\r\n",
+      "-- Compile API-documentation using: make docs\r\n",
+      "\r\n",
+      "-- \r\n",
+      "\r\n",
+      "-- octovis building as Release\r\n",
+      "-- Found octomap version: 1.10.0\r\n",
+      "-- Could NOT find OpenGL (missing: OPENGL_opengl_LIBRARY OPENGL_glx_LIBRARY OPENGL_INCLUDE_DIR) \r\n",
+      "-- QGLViewer includes found in /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/octovis/src/extern/QGLViewer\r\n",
+      "-- QGLViewer library not found.\r\n",
+      "-- Trying to build libQGLViewer from source in /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/octovis/src/extern/QGLViewer\r\n",
+      "-- \t generating Makefile using qmake\r\n",
+      "-- \t building library (this may take some time...)\r\n",
+      "make: *** No targets specified and no makefile found.  Stop.\r\n",
+      "\u001B[33mCMake Warning at octovis/CMakeModules/FindQGLViewer.cmake:111 (MESSAGE):\r\n",
+      "  Could not find libQGLViewer.so, failed to build?\r\n",
+      "Call Stack (most recent call first):\r\n",
+      "  octovis/CMakeLists.txt:80 (FIND_PACKAGE)\r\n",
+      "\r\n",
+      "\u001B[0m\r\n",
+      "\u001B[0m\r\n",
+      "\u001B[0m\r\n",
+      "\u001B[0mlibQGLViewer could not be found or generated.\u001B[0m\r\n",
+      "\u001B[0mUnfortunately, the viewer (octovis) can not be built because some requirements are missing.\u001B[0m\r\n",
+      "\u001B[0mThis will not affect the compilation of the stand-alone library and tools (octomap)\u001B[0m\r\n",
+      "\u001B[0mSee README.txt or http://octomap.sf.net for further information.\r\n",
+      "\u001B[0m\r\n",
+      "-- \r\n",
+      "\r\n",
+      "-- dynamicEDT3D building as Release\r\n",
+      "-- Found octomap version: 1.10.0\r\n",
+      "-- octomap libraries: /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/lib/liboctomap.so;/home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/lib/liboctomath.so\r\n",
+      "-- Could NOT find Doxygen (missing: DOXYGEN_EXECUTABLE) \r\n",
+      "-- \r\n",
+      "\r\n",
+      "-- Compile dynamicEDT3D using: make\r\n",
+      "-- Install dynamicEDT3D using: make install\r\n",
+      "--     (be sure to set the correct CMAKE_INSTALL_PREFIX before)\r\n",
+      "-- Compile API-documentation using: make docs_dynamicEDT3D\r\n",
+      "\r\n",
+      "-- Configuring done (0.1s)\r\n",
+      "-- Generating done (0.0s)\r\n",
+      "-- Build files have been written to: /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/build\r\n",
+      "[  4%] Built target octomath\r\n",
+      "[  9%] Built target octomath-static\r\n",
+      "[ 21%] Built target octomap\r\n",
+      "[ 33%] Built target octomap-static\r\n",
+      "[ 35%] Built target graph2tree\r\n",
+      "[ 38%] Built target log2graph\r\n",
+      "[ 40%] Built target binvox2bt\r\n",
+      "[ 42%] Built target bt2vrml\r\n",
+      "[ 45%] Built target edit_octree\r\n",
+      "[ 47%] Built target convert_octree\r\n",
+      "[ 50%] Built target eval_octree_accuracy\r\n",
+      "[ 52%] Built target compare_octrees\r\n",
+      "[ 53%] \u001B[32mBuilding CXX object octomap/src/CMakeFiles/simple_example.dir/simple_example.cpp.o\u001B[0m\r\n",
+      "[ 54%] \u001B[32m\u001B[1mLinking CXX executable /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/bin/simple_example\u001B[0m\r\n",
+      "[ 54%] Built target simple_example\r\n",
+      "[ 57%] Built target normals_example\r\n",
+      "[ 59%] Built target intersection_example\r\n",
+      "[ 61%] Built target octree2pointcloud\r\n",
+      "[ 64%] Built target test_raycasting\r\n",
+      "[ 66%] Built target test_iterators\r\n",
+      "[ 69%] Built target test_io\r\n",
+      "[ 71%] Built target test_changedkeys\r\n",
+      "[ 73%] Built target test_scans\r\n",
+      "[ 76%] Built target test_color_tree\r\n",
+      "[ 78%] Built target color_tree_histogram\r\n",
+      "[ 80%] Built target test_mapcollection\r\n",
+      "[ 83%] Built target test_pruning\r\n",
+      "[ 85%] Built target test_bbx\r\n",
+      "[ 88%] Built target unit_tests\r\n",
+      "[ 90%] Built target dynamicedt3d\r\n",
+      "[ 92%] Built target dynamicedt3d-static\r\n",
+      "[ 95%] Built target exampleEDT3D\r\n",
+      "[ 97%] Built target exampleEDTOctomap\r\n",
+      "[100%] Built target exampleEDTOctomapStamped\r\n",
+      "resolution: 0.25\r\n",
+      "Octree created and saved to octree_from_point_cloud.bt\r\n"
      ]
     }
    ],
+   "execution_count": 15
+  },
+  {
+   "cell_type": "code",
+   "id": "7dad4e53-4c62-4f64-9026-ffc8448c8438",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-09T21:10:25.548470Z",
+     "start_time": "2024-06-09T21:10:25.543436Z"
+    }
+   },
+   "source": "print(f\"octomap size: {os.path.getsize('OCTOMAP/bin/octree_from_point_cloud.bt') / (1024 * 1024)} MB\")",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "octomap size: 0.0644998550415039 MB\n"
+     ]
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-09T21:23:52.211052Z",
+     "start_time": "2024-06-09T21:10:29.179816Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    "print(f\"octomap size: {os.path.getsize('OCTOMAP/bin/octree_from_point_cloud.bt') / (1024 * 1024)} MB\")"
-   ]
+    "# Visualize the octomap\n",
+    "!octovis OCTOMAP/bin/octree_from_point_cloud.bt"
+   ],
+   "id": "1eb3660e1248444d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading binary octree type OcTree\r\n"
+     ]
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "50f66fd9dcfbdae6"
   }
  ],
  "metadata": {
