Ray casting while creating the octomap

--- a/Octomap_brainspark.ipynb
+++ b/Octomap_brainspark.ipynb
@@ -17,8 +17,8 @@
    "id": "5f5abb8a-d65e-4de3-a41b-0e2afc1ed7c9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T00:30:21.265557Z",
-     "start_time": "2024-06-10T00:30:20.170450Z"
+     "end_time": "2024-06-12T04:20:18.813200Z",
+     "start_time": "2024-06-12T04:20:15.864804Z"
     }
    },
    "source": [
@@ -372,8 +372,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-09T22:48:29.750462Z",
-     "start_time": "2024-06-09T22:47:43.115036Z"
+     "end_time": "2024-06-12T05:20:16.104394Z",
+     "start_time": "2024-06-12T05:18:01.753807Z"
     }
    },
    "cell_type": "code",
@@ -381,7 +381,7 @@
     "!cp simple_example.cpp OCTOMAP/octomap/src\n",
     "!cd OCTOMAP/build && cmake .. && make\n",
     "!./OCTOMAP/bin/simple_example\n",
-    "!octovis OCTOMAP/bin/octree_from_point_cloud.bt"
+    "!octovis octree_from_point_cloud.bt"
    ],
    "id": "55a7130a55548c83",
    "outputs": [
@@ -400,7 +400,6 @@
       "-- \r\n",
       "\r\n",
       "-- octomap building as Release\r\n",
-      "-- Could NOT find Doxygen (missing: DOXYGEN_EXECUTABLE) \r\n",
       "-- \r\n",
       "\r\n",
       "-- Compile octomap using: make\r\n",
@@ -437,7 +436,6 @@
       "-- dynamicEDT3D building as Release\r\n",
       "-- Found octomap version: 1.10.0\r\n",
       "-- octomap libraries: /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/lib/liboctomap.so;/home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/lib/liboctomath.so\r\n",
-      "-- Could NOT find Doxygen (missing: DOXYGEN_EXECUTABLE) \r\n",
       "-- \r\n",
       "\r\n",
       "-- Compile dynamicEDT3D using: make\r\n",
@@ -482,13 +480,13 @@
       "[ 95%] Built target exampleEDT3D\r\n",
       "[ 97%] Built target exampleEDTOctomap\r\n",
       "[100%] Built target exampleEDTOctomapStamped\r\n",
-      "resolution: 0.25\r\n",
+      "resolution: 0.1\r\n",
       "Octree created and saved to octree_from_point_cloud.bt\r\n",
       "Reading binary octree type OcTree\r\n"
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -511,18 +509,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T06:17:10.550140Z",
-     "start_time": "2024-06-10T06:17:10.505878Z"
+     "end_time": "2024-06-12T04:34:07.419365Z",
+     "start_time": "2024-06-12T04:34:07.405054Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "voxel_grid = RegularVoxelGrid(resolution=0.25, max_coord=25, min_coord=-25)\n",
+    "voxel_grid = RegularVoxelGrid(resolution=0.25, max_coord=5, min_coord=-5)\n",
     "# Generate dense points in a small area (high resolution needed)\n",
-    "dense_points = np.random.rand(1000, 3) * 3\n",
+    "dense_points = np.random.rand(1000, 3)\n",
     "\n",
     "# Generate sparse points in a larger area (low resolution needed)\n",
-    "sparse_points = (np.random.rand(50, 3) * 5) + 15\n",
+    "sparse_points = (np.random.rand(10, 3) * 2) + 2.5\n",
     "\n",
     "# Combine dense and sparse points\n",
     "points = np.vstack((dense_points, sparse_points))\n",
@@ -530,39 +528,39 @@
    ],
    "id": "a9e89413f3afeeb5",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T06:17:52.785640Z",
-     "start_time": "2024-06-10T06:17:15.252837Z"
+     "end_time": "2024-06-12T04:34:15.571240Z",
+     "start_time": "2024-06-12T04:34:09.767678Z"
     }
    },
    "cell_type": "code",
    "source": "visualize_voxel_grid(voxel_grid.get_voxel_grid_points())",
    "id": "d6b0a2661a815c89",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T00:31:09.234425Z",
-     "start_time": "2024-06-10T00:31:08.259367Z"
+     "end_time": "2024-06-12T04:34:34.687192Z",
+     "start_time": "2024-06-12T04:34:34.655454Z"
     }
    },
    "cell_type": "code",
    "source": "voxel_grid.write_voxel_grid_points_to_txt(filename=\"adaptive_voxel_grid_points.txt\")",
    "id": "d8a88b2572917cbc",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T00:31:12.347228Z",
-     "start_time": "2024-06-10T00:31:11.867239Z"
+     "end_time": "2024-06-12T04:35:00.379829Z",
+     "start_time": "2024-06-12T04:35:00.361468Z"
     }
    },
    "cell_type": "code",
@@ -576,24 +574,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved voxel map representation space : 21.972798347473145 MB\n"
+      "Saved voxel map representation space : 0.4395942687988281 MB\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-10T06:20:43.028030Z",
-     "start_time": "2024-06-10T06:18:58.806617Z"
+     "end_time": "2024-06-12T04:46:59.284014Z",
+     "start_time": "2024-06-12T04:36:11.282189Z"
     }
    },
    "cell_type": "code",
    "source": [
     "!cd OCTOMAP/build && cmake .. && make\n",
     "!./OCTOMAP/bin/simple_example\n",
-    "!octovis simple_tree.bt"
+    "!octovis octree_from_point_cloud.bt"
    ],
    "id": "3a98a83818597675",
    "outputs": [
@@ -612,7 +610,6 @@
       "-- \r\n",
       "\r\n",
       "-- octomap building as Release\r\n",
-      "-- Could NOT find Doxygen (missing: DOXYGEN_EXECUTABLE) \r\n",
       "-- \r\n",
       "\r\n",
       "-- Compile octomap using: make\r\n",
@@ -649,7 +646,6 @@
       "-- dynamicEDT3D building as Release\r\n",
       "-- Found octomap version: 1.10.0\r\n",
       "-- octomap libraries: /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/lib/liboctomap.so;/home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/lib/liboctomath.so\r\n",
-      "-- Could NOT find Doxygen (missing: DOXYGEN_EXECUTABLE) \r\n",
       "-- \r\n",
       "\r\n",
       "-- Compile dynamicEDT3D using: make\r\n",
@@ -672,8 +668,6 @@
       "[ 47%] Built target convert_octree\r\n",
       "[ 50%] Built target eval_octree_accuracy\r\n",
       "[ 52%] Built target compare_octrees\r\n",
-      "[ 53%] \u001B[32mBuilding CXX object octomap/src/CMakeFiles/simple_example.dir/simple_example.cpp.o\u001B[0m\r\n",
-      "[ 54%] \u001B[32m\u001B[1mLinking CXX executable /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/bin/simple_example\u001B[0m\r\n",
       "[ 54%] Built target simple_example\r\n",
       "[ 57%] Built target normals_example\r\n",
       "[ 59%] Built target intersection_example\r\n",
@@ -694,24 +688,13 @@
       "[ 95%] Built target exampleEDT3D\r\n",
       "[ 97%] Built target exampleEDTOctomap\r\n",
       "[100%] Built target exampleEDTOctomapStamped\r\n",
-      "\r\n",
-      "generating example map\r\n",
-      "\r\n",
-      "performing some queries:\r\n",
-      "occupancy probability at (0 0 0):\t 0.971\r\n",
-      "occupancy probability at (-1 -1 -1):\t 0.1192\r\n",
-      "occupancy probability at (1 1 1):\t is unknown\r\n",
-      "\r\n",
-      "wrote example file simple_tree.bt\r\n",
-      "\r\n",
-      "now you can use octovis to visualize: octovis simple_tree.bt\r\n",
-      "Hint: hit 'F'-key in viewer to see the freespace\r\n",
-      "\r\n",
+      "resolution: 0.1\r\n",
+      "Octree created and saved to octree_from_point_cloud.bt\r\n",
       "Reading binary octree type OcTree\r\n"
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 12
   },
   {
    "metadata": {
