Ray casting query for collision detection

--- a/Octomap_brainspark.ipynb
+++ b/Octomap_brainspark.ipynb
@@ -725,11 +725,160 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Ray casting is a method to mark free spaces along a ray from the sensor origin to the end of the ray. This is useful for collision detection and path planning. Octomap provides a ray casting method to check if a ray is free from obstacles. This is not possible with a regular voxel grid. During octomapping, when we insert ray casting between sensor origin and the detected endpoint from the lidar, we can mark free spaces in the octomap. ",
+   "id": "5725fba35fd91245"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Ray casting can also be used to see if a ray starting from a point, in a direction intersects with some obstacle or not within a max range. This is useful for path planning and collision detection.",
+   "id": "6079c40f25f22b1e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Modify simple_example.cpp to do ray casting during octomap to insert free cells during adding points from pointcloud. Then in octovis press F to view the free space pop up. ",
+   "id": "e671314e27e5a5f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T05:42:22.718393Z",
+     "start_time": "2024-06-12T05:42:11.509979Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "!cp simple_example.cpp OCTOMAP/octomap/src\n",
+    "!cd OCTOMAP/build && cmake .. && make\n",
+    "!./OCTOMAP/bin/simple_example\n",
+    "!octovis octree_from_point_cloud.bt"
+   ],
+   "id": "ef5d822262fca0f1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[0mCMake Deprecation Warning at CMakeLists.txt:1 (CMAKE_MINIMUM_REQUIRED):\r\n",
+      "  Compatibility with CMake < 3.5 will be removed from a future version of\r\n",
+      "  CMake.\r\n",
+      "\r\n",
+      "  Update the VERSION argument <min> value or use a ...<max> suffix to tell\r\n",
+      "  CMake that the project does not need compatibility with older versions.\r\n",
+      "\r\n",
+      "\u001B[0m\r\n",
+      "-- \r\n",
+      "\r\n",
+      "-- octomap building as Release\r\n",
+      "-- \r\n",
+      "\r\n",
+      "-- Compile octomap using: make\r\n",
+      "-- Install octomap using: make install\r\n",
+      "--     (be sure to set the correct CMAKE_INSTALL_PREFIX before)\r\n",
+      "-- Compile API-documentation using: make docs\r\n",
+      "\r\n",
+      "-- \r\n",
+      "\r\n",
+      "-- octovis building as Release\r\n",
+      "-- Found octomap version: 1.10.0\r\n",
+      "-- Could NOT find OpenGL (missing: OPENGL_opengl_LIBRARY OPENGL_glx_LIBRARY OPENGL_INCLUDE_DIR) \r\n",
+      "-- QGLViewer includes found in /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/octovis/src/extern/QGLViewer\r\n",
+      "-- QGLViewer library not found.\r\n",
+      "-- Trying to build libQGLViewer from source in /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/octovis/src/extern/QGLViewer\r\n",
+      "-- \t generating Makefile using qmake\r\n",
+      "-- \t building library (this may take some time...)\r\n",
+      "make: *** No targets specified and no makefile found.  Stop.\r\n",
+      "\u001B[33mCMake Warning at octovis/CMakeModules/FindQGLViewer.cmake:111 (MESSAGE):\r\n",
+      "  Could not find libQGLViewer.so, failed to build?\r\n",
+      "Call Stack (most recent call first):\r\n",
+      "  octovis/CMakeLists.txt:80 (FIND_PACKAGE)\r\n",
+      "\r\n",
+      "\u001B[0m\r\n",
+      "\u001B[0m\r\n",
+      "\u001B[0m\r\n",
+      "\u001B[0mlibQGLViewer could not be found or generated.\u001B[0m\r\n",
+      "\u001B[0mUnfortunately, the viewer (octovis) can not be built because some requirements are missing.\u001B[0m\r\n",
+      "\u001B[0mThis will not affect the compilation of the stand-alone library and tools (octomap)\u001B[0m\r\n",
+      "\u001B[0mSee README.txt or http://octomap.sf.net for further information.\r\n",
+      "\u001B[0m\r\n",
+      "-- \r\n",
+      "\r\n",
+      "-- dynamicEDT3D building as Release\r\n",
+      "-- Found octomap version: 1.10.0\r\n",
+      "-- octomap libraries: /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/lib/liboctomap.so;/home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/lib/liboctomath.so\r\n",
+      "-- \r\n",
+      "\r\n",
+      "-- Compile dynamicEDT3D using: make\r\n",
+      "-- Install dynamicEDT3D using: make install\r\n",
+      "--     (be sure to set the correct CMAKE_INSTALL_PREFIX before)\r\n",
+      "-- Compile API-documentation using: make docs_dynamicEDT3D\r\n",
+      "\r\n",
+      "-- Configuring done (0.1s)\r\n",
+      "-- Generating done (0.0s)\r\n",
+      "-- Build files have been written to: /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/build\r\n",
+      "[  4%] Built target octomath\r\n",
+      "[  9%] Built target octomath-static\r\n",
+      "[ 21%] Built target octomap\r\n",
+      "[ 33%] Built target octomap-static\r\n",
+      "[ 35%] Built target graph2tree\r\n",
+      "[ 38%] Built target log2graph\r\n",
+      "[ 40%] Built target binvox2bt\r\n",
+      "[ 42%] Built target bt2vrml\r\n",
+      "[ 45%] Built target edit_octree\r\n",
+      "[ 47%] Built target convert_octree\r\n",
+      "[ 50%] Built target eval_octree_accuracy\r\n",
+      "[ 52%] Built target compare_octrees\r\n",
+      "[ 53%] \u001B[32mBuilding CXX object octomap/src/CMakeFiles/simple_example.dir/simple_example.cpp.o\u001B[0m\r\n",
+      "[ 54%] \u001B[32m\u001B[1mLinking CXX executable /home/sambaran.ghosal/BrainCorp/Sambaran/development/octomap/OCTOMAP/bin/simple_example\u001B[0m\r\n",
+      "[ 54%] Built target simple_example\r\n",
+      "[ 57%] Built target normals_example\r\n",
+      "[ 59%] Built target intersection_example\r\n",
+      "[ 61%] Built target octree2pointcloud\r\n",
+      "[ 64%] Built target test_raycasting\r\n",
+      "[ 66%] Built target test_iterators\r\n",
+      "[ 69%] Built target test_io\r\n",
+      "[ 71%] Built target test_changedkeys\r\n",
+      "[ 73%] Built target test_scans\r\n",
+      "[ 76%] Built target test_color_tree\r\n",
+      "[ 78%] Built target color_tree_histogram\r\n",
+      "[ 80%] Built target test_mapcollection\r\n",
+      "[ 83%] Built target test_pruning\r\n",
+      "[ 85%] Built target test_bbx\r\n",
+      "[ 88%] Built target unit_tests\r\n",
+      "[ 90%] Built target dynamicedt3d\r\n",
+      "[ 92%] Built target dynamicedt3d-static\r\n",
+      "[ 95%] Built target exampleEDT3D\r\n",
+      "[ 97%] Built target exampleEDTOctomap\r\n",
+      "[100%] Built target exampleEDTOctomapStamped\r\n",
+      "resolution: 0.1\r\n",
+      "Octree created and saved to octree_from_point_cloud.bt\r\n",
+      "Ray hit the point: (3.25 0.05 0.05)\r\n",
+      "Ray did not hit the point: (-100.05 0.05 0.05)\r\n",
+      "Ray hit the point: (0.05 3.75 0.05)\r\n",
+      "Ray hit the point: (0.05 -3.95 0.05)\r\n",
+      "Ray hit the point: (0.05 0.05 3.75)\r\n",
+      "Ray hit the point: (0.05 0.05 -3.95)\r\n",
+      "Reading binary octree type OcTree\r\n"
+     ]
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Add code to do ray casting for collision detection along a specific direction",
+   "id": "a91b642683e4194a"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "63b845ba5e1796c7"
+   "id": "63e2f16aa731784d"
   }
  ],
  "metadata": {
