Better ray casting output

--- a/Octomap_brainspark.ipynb
+++ b/Octomap_brainspark.ipynb
@@ -744,8 +744,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-12T05:42:22.718393Z",
-     "start_time": "2024-06-12T05:42:11.509979Z"
+     "end_time": "2024-06-12T06:07:53.409219Z",
+     "start_time": "2024-06-12T06:07:47.875201Z"
     }
    },
    "cell_type": "code",
@@ -854,17 +854,17 @@
       "[100%] Built target exampleEDTOctomapStamped\r\n",
       "resolution: 0.1\r\n",
       "Octree created and saved to octree_from_point_cloud.bt\r\n",
-      "Ray hit the point: (3.25 0.05 0.05)\r\n",
-      "Ray did not hit the point: (-100.05 0.05 0.05)\r\n",
-      "Ray hit the point: (0.05 3.75 0.05)\r\n",
-      "Ray hit the point: (0.05 -3.95 0.05)\r\n",
-      "Ray hit the point: (0.05 0.05 3.75)\r\n",
-      "Ray hit the point: (0.05 0.05 -3.95)\r\n",
+      "Ray from (0 0 0) at direction (1 0 0) hit the point: (3.25 0.05 0.05)\r\n",
+      "Ray from (0 0 0) at direction (-1 0 0)  did not hit any obstacle\r\n",
+      "Ray from (0 0 0) at direction (0 1 0) hit the point: (0.05 3.75 0.05)\r\n",
+      "Ray from (0 0 0) at direction (0 -1 0) hit the point: (0.05 -3.95 0.05)\r\n",
+      "Ray from (0 0 0) at direction (0 0 1) hit the point: (0.05 0.05 3.75)\r\n",
+      "Ray from (0 0 0) at direction (0 0 -1) hit the point: (0.05 0.05 -3.95)\r\n",
       "Reading binary octree type OcTree\r\n"
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 24
   },
   {
    "metadata": {},
